wacc/test/golden/semanticErr.expressions.intOpTypeErr
# expresission type mismatch bool->int

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  int x = true + false
end


In test/wacc_examples/invalid/semanticErr/expressions/intOpTypeErr.wacc (line 12, column 16):
type error: expected an int but found a bool
> begin
>   int x = true + false
>                ^
> end

